--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
   रसीद संख्या:
   <input type="text" id="receiptNo" required>
 
-  CSC Transaction ID:
+  Transaction ID:
   <input type="text" id="txnId" readonly>
 
   भुगतान प्रकार:
   <select id="paymentType">
-    <option>Wallet (CSC)</option>
+    <option>Wallet (debit card)</option>
     <option>UPI</option>
     <option>Cash</option>
   </select>
