--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   भुगतान प्रकार:
   <select id="paymentType">
-    <option>Wallet (debit card)</option>
+    <option>Wallet (Other)</option>
     <option>UPI</option>
     <option>Cash</option>
   </select>
