--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
 
   भुगतान प्रकार:
   <select id="paymentType">
-    <option>Wallet (Other)</option>
+    <option>Wallet </option>
     <option>UPI</option>
     <option>Cash</option>
+    <option>CSC</option>
   </select>
 
   राशि (₹):
